--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,3 +27,69 @@ body {
   }
 }
 
+
+
+.thought {
+  display:flex;
+  background-color:#067168;
+  padding: 12px;
+  border-radius:30px;
+  min-width:40px;
+  max-width:280px;
+  min-height:40px;
+  position:absolute;
+  align-items:center;
+  justify-content:center;
+  text-align:center;
+  z-index: 3;
+}
+.thought:before,
+.thought:after {
+  content:"";
+  background-color:#067168;
+  border-radius:50%;
+  display:block;
+  position:absolute;
+  z-index:-1;
+}
+.thought:before {
+  width:44px;
+  height:44px;
+  top:-12px;
+  left:28px;
+  box-shadow:-50px 30px 0 -12px #067168;
+  z-index: 2;
+}
+.thought:after {
+  bottom:-10px;
+  right:26px;
+  width:30px;
+  height:30px;
+  box-shadow:40px -34px 0 0 #067168,
+  -28px -6px 0 -2px #067168,
+  -24px 17px 0 -6px #067168,
+  -5px 25px 0 -10px #067168;
+  z-index: 2;
+}
+
+.thought p {
+  z-index: 3;
+  position: relative;
+}
+
+.thought p svg {
+  position: absolute;
+  width: 56px;
+  height: 96px;
+  filter: brightness(0.9);
+  opacity: .6;
+  z-index: 1;
+  fill: black;
+  right: 0;
+  bottom: 0;
+}
+
+.thought p span {
+  z-index: 4;
+  position: relative;
+}
