--- a/front/src/app/globals.css
+++ b/front/src/app/globals.css
@@ -94,3 +94,22 @@ body {
   position: relative;
   color: white;
 }
+
+.ql-toolbar.ql-snow {
+  border-bottom: 1px solid #8080801f !important;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+
+.ql-container {
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+
+.ql-container .ql-editor {
+  min-height: 200px;
+}
+
+.ql-editor.ql-blank::before {
+  opacity: .7;
+}
